tests/lexer/invalid/test_boundaries.src
// Тест 11: Граничные значения (с ошибками)
int max_int = 2147483648;   // ОШИБКА: больше 2³¹-1
int min_int = -2147483649;  // ОШИБКА: меньше -2³¹
float small = 0.0000001;    // OK
float large = 999999.999999; // OK